# Gally

./: .gitignore  Opportunity Cost Yield Multiplier.md  README.md  config.devnet.toml  config.toml  run_devnet.sh  run_stack.sh  run_testnet.sh  sim_state.devnet.json  sim_state.json  sim_state.local.json  sim_users.devnet.json  sim_users.json  sim_users.local.json  walrus_blobs.json
.github/scripts/: ci_local.sh
.github/workflows/: ci.yml
Backend Indexer/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
Backend Indexer/src/: config.rs  lib.rs  main.rs  metrics.rs  ws.rs
Backend Indexer/src/api/: extractors.rs  limit.rs  mod.rs
Backend Indexer/src/api/routes/: address.rs  assets.rs  disputes.rs  governance.rs  health.rs  metrics.rs  mod.rs  portfolio.rs  proxy.rs  tx.rs  validators.rs  ws.rs
Backend Indexer/src/db/: mod.rs  models.rs  queries.rs
Backend Indexer/src/db/migrations/: 001_init.sql  002_governance_assets.sql  003_validators_positions.sql  004_yield_tranches_disputes.sql  005_metadata_enrichment.sql
Backend Indexer/src/ingestion/: event_types.rs  mod.rs
Backend Indexer/src/ingestion/handlers/: asset.rs  dispute.rs  governance.rs  mod.rs  position.rs  tranche.rs  validator.rs  yield_index.rs
Backend Indexer/src/sui_client/: mod.rs
Backend Indexer/tests/integration/: mod.rs  test_api.rs  test_ingestion.rs  test_lifecycle.rs  test_limits.rs
Live Simulation Bot/: .gitignore  Cargo.toml  README.md  config.toml.example
Live Simulation Bot/src/: action.rs  activity.rs  catalog.rs  cli.rs  config.rs  daemon.rs  gas.rs  keys.rs  lifecycle.rs  main.rs  pace.rs  ptb.rs  reseed.rs  rng.rs  seed.rs  showcase.rs  sim_state.rs  sui_client.rs  walrus.rs
docs/: architecture.md  concepts.md  economics.md  explorer.md  faq.md  getting-started.md  glossary.md  index.md  lifecycle.md  parameters.md  roles.md  run.md  scenarios.md  security.md  smart-trust.md  wrapping.md
docs/guides/: challenger.md  investor.md  keeper.md
entity_token_template/: .gitignore  Move.toml  README.md
entity_token_template/scripts/: instantiate.sh
entity_token_template/sources/: entity_token.move
entity_token_template/tests/: entity_token_tests.move
frontend-explorer/: .env.local.example  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend-explorer/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend-explorer/app/activity/: page.tsx
frontend-explorer/app/assets/: page.tsx
frontend-explorer/app/cranks/: page.tsx
frontend-explorer/components/: PageHeader.tsx  WatchButton.tsx  WatchlistPanel.tsx
frontend-explorer/e2e/: _probe.spec.ts  cranks.spec.ts  docs.spec.ts  documents.spec.ts  governance.spec.ts  health.spec.ts  holders.spec.ts  link-crawl.spec.ts  resolution.spec.ts  responsive.spec.ts  smoke.spec.ts  transactions.spec.ts  utils.ts  verbs.spec.ts
frontend-explorer/lib/: format.ts  notifications.ts  types.ts  wallet.ts  watchlist.ts
gally_core/: Move.toml  Published.toml  README.md
gally_core/sources/: accumulator.move  asset.move  dispute.move  gally_core.move  protocol.move  share.move  usdc.move  validator.move
gally_core/tests/: accumulator_tests.move  asset_tests.move  dispute_tests.move  gally_core_tests.move  integration_tests.move  metadata_tests.move  protocol_tests.move  test_tokens.move  validator_tests.move  wrap_tests.move
gally_mock_faucet/: Move.toml  Published.toml  README.md
gally_mock_faucet/sources/: faucet.move
gally_mock_faucet/tests/: faucet_tests.move
usdc/: Move.toml  Published.toml  README.md
usdc/sources/: usdc.move
(+138 files in other folders)
